update swa to model_training_demo.ipynb

--- a/notebooks_demo/model_training_demo.ipynb
+++ b/notebooks_demo/model_training_demo.ipynb
@@ -28,6 +28,7 @@
     "import torch.optim as optim\n",
     "from torch import nn\n",
     "from torchvision import transforms\n",
+    "import torchcontrib\n",
     "\n",
     "from hw_grapheme.io.load_data import load_processed_data\n",
     "from hw_grapheme.model_archs.se_resnext import se_resnext50\n",
@@ -132,6 +133,8 @@
     "model_arch = se_resnext50\n",
     "model_parameter = {}\n",
     "\n",
+    "swa = True\n",
+    "\n",
     "optimizer = optim.SGD\n",
     "optimizer_parameter = {\"weight_decay\": 1e-4, \"momentum\": 0.9, \"lr\": 0.1, \"nesterov\": True}\n",
     " \n",
@@ -139,7 +142,7 @@
     "epoch_scheduler_func = None\n",
     "epoch_scheduler_func_para = {}\n",
     "error_plateau_scheduler_func = optim.lr_scheduler.ReduceLROnPlateau\n",
-    "error_plateau_scheduler_func_para = {\"mode\": \"min\", \"factor\": 0.1, \"patience\": 10, \"verbose\": True}\n",
+    "error_plateau_scheduler_func_para = {\"mode\": \"min\", \"factor\": 0.1, \"patience\": 10, \"verbose\": True, \"min_lr\":1e-3}\n",
     "\n",
     "# prob. of using [\"mixup\", \"cutmix\", \"cross_entropy\"] loss\n",
     "train_loss_prob = [0.0, 1.0, 0.0]\n",
@@ -180,6 +183,9 @@
     "    # create optimizer\n",
     "    optimizer_ft = optimizer(model.parameters(), **optimizer_parameter)\n",
     "    \n",
+    "    if swa:\n",
+    "        optimizer_ft = torchcontrib.optim.SWA(optimizer_ft)\n",
+    "        \n",
     "    if mixed_precision:\n",
     "        model.to(\"cuda\")\n",
     "        model, optimizer_ft = amp.initialize(model, optimizer_ft, opt_level=\"O1\")\n",
@@ -211,12 +217,13 @@
     "        full_save_dir = os.path.join(save_dir, f\"fold_{i}\")\n",
     "    else:\n",
     "        full_save_dir = None\n",
+    "        \n",
     "    callbacks = train_model(\n",
     "        model, optimizer_ft, data_loaders,\n",
     "        mixed_precision, train_loss_prob, head_loss_weight,\n",
     "        mixup_alpha=mixup_alpha, num_epochs=n_epoch,\n",
     "        epoch_scheduler=epoch_scheduler, error_plateau_scheduler=error_plateau_scheduler,\n",
-    "        save_dir=full_save_dir, wandb_log=wandb_log\n",
+    "        save_dir=full_save_dir, wandb_log=wandb_log, swa=swa\n",
     "    )"
    ]
   },
