--- a/notebooks_demo/model_training_demo.ipynb
+++ b/notebooks_demo/model_training_demo.ipynb
@@ -51,9 +51,9 @@
     "# load processed data \n",
     "pickle_paths = [\n",
     "    \"../data/processed/size_128/train_data_0.pickle\",\n",
-    "    \"../data/processed/size_128/train_data_1.pickle\",\n",
-    "    \"../data/processed/size_128/train_data_2.pickle\",\n",
-    "    \"../data/processed/size_128/train_data_3.pickle\",\n",
+    "#     \"../data/processed/size_128/train_data_1.pickle\",\n",
+    "#     \"../data/processed/size_128/train_data_2.pickle\",\n",
+    "#     \"../data/processed/size_128/train_data_3.pickle\",\n",
     "]\n",
     "\n",
     "image_data, name_data, label_data = load_processed_data(pickle_paths, image_size=128)"
@@ -137,7 +137,10 @@
     "\n",
     "optimizer = optim.SGD\n",
     "optimizer_parameter = {\"weight_decay\": 1e-4, \"momentum\": 0.9, \"lr\": 0.1, \"nesterov\": True}\n",
-    " \n",
+    "\n",
+    "# whether to use weighted loss for each class\n",
+    "is_weighted_class_loss = False\n",
+    "\n",
     "# create lr scheduler\n",
     "epoch_scheduler_func = None\n",
     "epoch_scheduler_func_para = {}\n",
@@ -149,12 +152,13 @@
     "mixup_alpha = 0.4  # for mixup/cutmix only\n",
     "\n",
     "# weighting of [root, vowel, consonant]\n",
-    "head_loss_weight = [0.5, 0.25, 0.25]\n",
+    "head_weights = [0.5, 0.25, 0.25]\n",
     "\n",
-    "wandb_log = True\n",
+    "wandb_log = False\n",
     "\n",
     "# save dir, set None to not save, need to manual create folders first\n",
-    "save_dir = \"../models/se_resnext_sgd_decay\""
+    "# save_dir = \"../models/se_resnext_sgd_decay\"\n",
+    "save_dir = None"
    ]
   },
   {
@@ -170,6 +174,25 @@
    },
    "outputs": [],
    "source": [
+    "if is_weighted_class_loss:\n",
+    "    root_label = label_data[:, 0]\n",
+    "    vowel_label = label_data[:, 1]\n",
+    "    consonant_label = label_data[:, 2]\n",
+    "\n",
+    "    class_weight = \"balanced\"\n",
+    "\n",
+    "    root_cls_weight = compute_class_weight(class_weight, np.unique(root_label), root_label)\n",
+    "    vowel_cls_weight = compute_class_weight(class_weight, np.unique(vowel_label), vowel_label)\n",
+    "    consonant_cls_weight = compute_class_weight(class_weight, np.unique(consonant_label), consonant_label)\n",
+    "    \n",
+    "    class_weights = [\n",
+    "        torch.Tensor(root_cls_weight).cuda(),\n",
+    "        torch.Tensor(vowel_cls_weight).cuda(),\n",
+    "        torch.Tensor(consonant_cls_weight).cuda(),\n",
+    "    ]\n",
+    "else:\n",
+    "    class_weights = None\n",
+    "    \n",
     "for i, (train_idx, valid_idx) in enumerate(zip(train_idx_list, test_idx_list)):\n",
     "    # skip unwanted fold\n",
     "    if i not in [0]:\n",
@@ -210,7 +233,7 @@
     "    if error_plateau_scheduler_func:\n",
     "        error_plateau_scheduler = error_plateau_scheduler_func(optimizer_ft, **error_plateau_scheduler_func_para)\n",
     "    else:\n",
-    "        error_plateaus_scheduler = None\n",
+    "        error_plateau_scheduler = None\n",
     "        \n",
     "    # callbacks = {}\n",
     "    if save_dir:\n",
@@ -218,13 +241,24 @@
     "    else:\n",
     "        full_save_dir = None\n",
     "        \n",
-    "    callbacks = train_model(\n",
-    "        model, optimizer_ft, data_loaders,\n",
-    "        mixed_precision, train_loss_prob, head_loss_weight,\n",
-    "        mixup_alpha=mixup_alpha, num_epochs=n_epoch,\n",
-    "        epoch_scheduler=epoch_scheduler, error_plateau_scheduler=error_plateau_scheduler,\n",
-    "        save_dir=full_save_dir, wandb_log=wandb_log, swa=swa\n",
-    "    )"
+    "    train_input_args = {\n",
+    "        \"model\": model, \n",
+    "        \"optimizer\": optimizer_ft,\n",
+    "        \"dataloaders\": data_loaders,\n",
+    "        \"mixed_precision\": mixed_precision, \n",
+    "        \"train_loss_prob\": train_loss_prob,\n",
+    "        \"class_weights\": class_weights,\n",
+    "        \"head_weights\": head_weights,\n",
+    "        \"mixup_alpha\": mixup_alpha, \n",
+    "        \"num_epochs\": n_epoch,\n",
+    "        \"epoch_scheduler\": epoch_scheduler, \n",
+    "        \"error_plateau_scheduler\": error_plateau_scheduler,\n",
+    "        \"save_dir\": full_save_dir,\n",
+    "        \"wandb_log\": wandb_log,\n",
+    "        \"swa\": swa,\n",
+    "    }\n",
+    "        \n",
+    "    callbacks = train_model(**train_input_args)"
    ]
   },
   {
