Keep py only for demo, no need notebook

--- a/notebooks_demo/model_training_demo.ipynb
+++ b/notebooks_demo/model_training_demo.ipynb
@@ -353,7 +353,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,py"
+   "formats": "ipynb,py:light"
   },
   "kernelspec": {
    "display_name": "Python 3",
